--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,7 @@ DB_PASSWORD=
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
+PASSPORT_LOGIN_ENDPOINT=http://blog.toby.com/v1/oauth/token
+PASSPORT_CLIENT_ID=4
+PASSPORT_CLIENT_SECRET=YhkTK8NSp2PcnktZxYunTNG50ldUvHGAYsUKeVSq
