--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.0",
         "dusterio/lumen-passport": "^0.3.8",
         "flipbox/lumen-generator": "9.2.0",
+        "guzzlehttp/guzzle": "^7.8",
         "laravel/lumen-framework": "^9.0",
         "laravel/passport": "^10.4"
     },
