--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^8.0",
+        "anik/form-request": "^5.0",
         "dusterio/lumen-passport": "^0.3.8",
         "flipbox/lumen-generator": "9.2.0",
         "guzzlehttp/guzzle": "^7.8",
