--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "flipbox/lumen-generator": "9.2.0",
         "guzzlehttp/guzzle": "^7.8",
         "laravel/lumen-framework": "^9.0",
-        "laravel/passport": "^10.4"
+        "laravel/passport": "^10.4",
+        "league/flysystem": "^3.27"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
