--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,24 @@ DB_DATABASE=
 DB_USERNAME=
 DB_PASSWORD=
 
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME=toby@cybridge.jp
+MAIL_PASSWORD=uprorhypysnombwj
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="pttrungvts@mail.com"
+MAIL_FROM_NAME="${APP_NAME}"
+
+# MAIL_MAILER=smtp
+# MAIL_HOST=10.11.15.10:1025
+# MAIL_PORT=8025
+# MAIL_USERNAME=null
+# MAIL_PASSWORD=null
+# MAIL_ENCRYPTION=null
+# MAIL_FROM_ADDRESS = 'pttrunvt@gmail.com'
+# MAIL_FROM_NAME ="${APP_NAME}"
+
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 
