--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=465
 MAIL_USERNAME=toby@cybridge.jp
-MAIL_PASSWORD=uprorhypysnombwj
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="pttrungvts@mail.com"
 MAIL_FROM_NAME="${APP_NAME}"
