Comment with Rabbitmq

--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,11 @@ MAIL_FROM_NAME="${APP_NAME}"
 # MAIL_FROM_ADDRESS = 'pttrunvt@gmail.com'
 # MAIL_FROM_NAME ="${APP_NAME}"
 
+RABBITMQ_HOST=
+RABBITMQ_PORT=5672
+RABBITMQ_USERNAME=
+RABBITMQ_PASSWORD=
+
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 
